# compracolectiva

./: README.md  pyproject.toml
backend/backend/: settings.py  urls.py
