[tool.poetry]
name = "compracolectiva"
version = "0.1.0"
description = "backend para el sistema de compras colectivas"
authors = ["Dario Ureña <darioaxel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
